--- a/app/views/conservation.html
+++ b/app/views/conservation.html
@@ -70,7 +70,7 @@
     </div>
     <div skrollr class="div-fixed z-450" data-1999="left:18rem;" data-2000="opacity:0; top:58rem;" data-3000="opacity:1; top:52rem;" data-4000="opacity:1; top:52rem;" data-5000="opacity:0; top:58rem;">
       <div class="text-label">
-        <p>Access</p>
+        <p>Users</p>
       </div>
     </div>
   </div>
@@ -108,7 +108,7 @@
     <div skrollr class="div-fixed z-250" data-7999="top:14rem;" data-8000="opacity:0; left:70rem;" data-9000="opacity:1; left:42rem;" data-10000="opacity:1; left:42rem;" data-11000="opacity:0; left:70rem;">
       <div id="cons-image-08" class="image-small wide"></div>
     </div>
-    <div skrollr class="div-fixed z-200" data-7999="left:32rem;" data-8000="opacity:0; top:50rem;" data-9000="opacity:1; top:32rem;" data-10000="opacity:1; top:32rem;" data-11000="opacity:0; top:50rem;">
+    <div skrollr class="div-fixed z-200" data-7999="left:30rem;" data-8000="opacity:0; top:50rem;" data-9000="opacity:1; top:32rem;" data-10000="opacity:1; top:32rem;" data-11000="opacity:0; top:50rem;">
       <div id="cons-image-09" class="image-small square"></div>
     </div>
     <div skrollr class="div-fixed z-100" data-7999="top:16rem;" data-8000="opacity:0; left:-50rem;" data-9000="opacity:1; left:5rem;" data-10000="opacity:1; left:5rem;" data-11000="opacity:0; left:-50rem;">
@@ -116,7 +116,7 @@
     </div>
     <div skrollr class="div-fixed z-450" data-7999="left:18rem;" data-8000="opacity:0; top:58rem;" data-9000="opacity:1; top:52rem;" data-10000="opacity:1; top:52rem;" data-11000="opacity:0; top:58rem;">
       <div class="text-label">
-        <p>Work</p>
+        <p>Industry</p>
       </div>
     </div>
   </div>
@@ -236,7 +236,7 @@
   <div id="section09">
     <div skrollr class="div-fixed z-400" data-25999="top:8rem;" data-26000="opacity:0; left:-50rem;" data-27000="opacity:1; left:5rem;">
       <div class="text-frame">
-        <p alt="">The Edwards Aquifer region found a way to come together in order to meet the needs of a hugely diverse set of interests.  The Habitat Conservation Plan provides certainty to the region by affirming local control over use of the Edwards Aquifer.</p>
+        <p alt="">The Edwards Aquifer region found a way to come together in order to meet the needs of a hugely diverse set of interests.  The <a class="nav-link-hcp" href="{{urlHcp}}" title="Habitat Conservation Plan" target="_blank" ng-click="linkModelFunc(urlHcp)">Habitat Conservation Plan</a> provides certainty to the region by affirming local control over use of the Edwards Aquifer.</p>
       </div>
     </div>
     <div skrollr class="div-fixed z-300" data-25999="top:23rem;" data-26000="opacity:0; left:-10rem;" data-27000="opacity:1; left:4rem;">
