--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -65,7 +65,7 @@
         data-5500="top:20rem; left:20rem; opacity:1; transform:scale(1);">
         <!-- data-6000="top:20rem; left:5rem; opacity:0; transform:scale(1);"> -->
         <div id="explore-text-drainage" class="text-flyin">
-          <h1 class="no-Ibar">Drainage Zone<h1>
+          <h1 class="no-Ibar">Drainage Area<h1>
         </div>
       </div>
 
@@ -84,7 +84,7 @@
         data-7000="top:36rem; left:25rem; opacity:1; transform:scale(1);">
         <!-- data-7500="top:36rem; left:10rem; opacity:0; transform:scale(1);"> -->
         <div id="explore-text-recharge" class="text-flyin">
-          <h1 class="no-Ibar">Recharge Zone<h1>
+          <h1 class="no-Ibar">Recharge Area<h1>
         </div>
       </div>
 
@@ -103,7 +103,7 @@
         data-8000="top:42rem; left:50rem; opacity:1; transform:scale(1);">
         <!-- data-8500="top:42rem; left:40rem; opacity:0; transform:scale(1);"> -->
         <div id="explore-text-artesian" class="text-flyin">
-          <h1 class="no-Ibar">Artesian Zone<h1>
+          <h1 class="no-Ibar">Artesian Area<h1>
         </div>
       </div>
 
