--- a/app/views/springs.html
+++ b/app/views/springs.html
@@ -127,7 +127,7 @@
     </div>
     <div skrollr class="div-fixed z-450" data-10999="left:18rem;" data-11000="opacity:0; top:58rem;" data-12000="opacity:1; top:52rem;" data-13000="opacity:1; top:52rem;" data-14000="opacity:0; top:58rem;">
       <div class="text-label">
-        <p>Fault Lines</p>
+        <p>Artesian Flow</p>
       </div>
     </div>
   </div>
@@ -144,7 +144,7 @@
     </div>
     <div skrollr class="div-fixed z-450" data-13999="left:18rem;" data-14000="opacity:0; top:58rem;" data-15000="opacity:1; top:52rem;" data-16000="opacity:1; top:52rem;" data-17000="opacity:0; top:58rem;">
       <div class="text-label">
-        <p>Deep Springs</p>
+        <p>Spring Sampling</p>
       </div>
     </div>
   </div>
