Views are all reordered within the html view  with correct content. Still need to update the skrollr values so the slides display in the expected sequence.

--- a/app/views/geology.html
+++ b/app/views/geology.html
@@ -68,15 +68,16 @@
   <div id="section02">
     <div skrollr class="div-fixed z-400" data-4999="top:7.5rem;" data-5000="opacity:0; left:-50rem;" data-6000="opacity:1; left:5rem;" data-7000="opacity:1; left:5rem;" data-8000="opacity:0; left:50rem;">
       <div class="text-frame">
-        <p alt="">Beginning along the Southern edge of the Edwards Plateau, the 5,400 square mile Drainage Area funnels water into streams and creeks that flow south toward the Recharge Zone—the outcrop of the Edwards Limestone.<br><span class="address-lookup"><span class="glyphicon glyphicon-search glyph-spacing-right address-lookup-color"></span>Learn which aquifer sustains your area today.<a class="nav-link-address-lookup" href="{{urlAddressLookup}}" title="Aquifer Address Lookup" target="_blank" ng-click="linkModelFunc(urlAddressLookup)">Look up your address online here!</a></span></p>
+        <!-- <p alt="">Beginning along the Southern edge of the Edwards Plateau, the 5,400 square mile Drainage Area funnels water into streams and creeks that flow south toward the Recharge Zone—the outcrop of the Edwards Limestone.<br><span class="address-lookup"><span class="glyphicon glyphicon-search glyph-spacing-right address-lookup-color"></span>Learn which aquifer sustains your area today.<a class="nav-link-address-lookup" href="{{urlAddressLookup}}" title="Aquifer Address Lookup" target="_blank" ng-click="linkModelFunc(urlAddressLookup)">Look up your address online here!</a></span></p> -->
+        <p alt="">The Edwards Aquifer began forming over 100 million years ago, while south Texas was covered by a warm shallow ocean. The remains of organisms accumulated in layers, later forming the limestone as the seas regressed.  During the Cretaceous Period, dinosaurs roamed the landscape and natural forces went to work, carving the landscape and forming the aquifer we know today.</p>
       </div>
     </div>
     <div skrollr class="div-fixed z-100" data-4999="top:16rem;" data-5000="opacity:0; left:50rem;" data-6000="opacity:1; left:5rem;" data-7000="opacity:1; left:5rem;" data-8000="opacity:0; left:-50rem;">
-      <div id="ck-image-01" class="image-frame"></div>
+      <!-- <div id="ck-image-01" class="image-frame"></div> -->
     </div>
     <div skrollr class="div-fixed z-450" data-4999="left:18rem;" data-5000="opacity:0; top:58rem;" data-6000="opacity:1; top:52rem;" data-7000="opacity:1; top:52rem;" data-8000="opacity:0; top:58rem;">
       <div class="text-label">
-        <p>Edwards Aquifer</p>
+        <p>Geologic History of the Aquifer</p>
       </div>
     </div>
   </div>
@@ -195,7 +196,7 @@
   <div id="end">
     <div skrollr class="div-fixed z-500" data-27499="left:9rem;" data-27500="opacity:0; top:58rem;" data-28000="opacity:1; top:54rem;">
       <div class="end-link">
-        <a href="#/conservation">Continue Exploring
+        <a href="#/springs">Continue Exploring
           <div id="holder">
             <div class="dot"></div>
             <div class="pulse"></div>      
