--- a/app/views/springs.html
+++ b/app/views/springs.html
@@ -47,7 +47,6 @@
         <source src="../videos/720p/SpringFlow.mp4" type="video/mp4">
       </video>
     </div>
-    </div>
     <div skrollr class="div-fixed z-450" data-0="left:18rem;" data-1000="opacity:1; top:52rem;" data-2000="opacity:0; top:58rem;">
       <div class="text-label">
         <p>Comal Springs</p>
@@ -57,63 +56,6 @@
 
   <!-- Section 1 -->
   <div id="section01">
-    <div skrollr class="div-fixed z-400" data-1999="top:8rem;" data-2000="opacity:0; left:-50rem;" data-3000="opacity:1; left:5rem;" data-4000="opacity:1; left:5rem;" data-5000="opacity:0; left:50rem;">
-      <div class="text-frame">
-        <p alt="">Spring flow is dependant upon recharge and conservation.  Declining aquifer leves can result in reduced flow, or no flow if water levels drop below the elevation of the spring openings.</p>
-      </div>
-    </div>
-    <div skrollr class="div-fixed z-100" data-1999="top:16rem;" data-2000="opacity:0; left:50rem;" data-3000="opacity:1; left:5rem;" data-4000="opacity:1; left:5rem;" data-5000="opacity:0; left:-50rem;">
-      <video class="video-frame" preload="auto" autoplay loop muted>
-        <source src="../videos/720p/ComalSpringsRun.webm" type="video/webm">
-        <source src="../videos/720p/ComalSpringsRun.mp4" type="video/mp4">
-      </video>
-    </div>
-    <div skrollr class="div-fixed z-450" data-1999="left:18rem;" data-2000="opacity:0; top:58rem;" data-3000="opacity:1; top:52rem;" data-4000="opacity:1; top:52rem;" data-5000="opacity:0; top:58rem;">
-      <div class="text-label">
-        <p>Spring Flow</p>
-      </div>
-    </div>
-  </div>
-
-  <!-- Section 2 -->
-  <div id="section02">
-    <div skrollr class="div-fixed z-400" data-4999="top:8rem;" data-5000="opacity:0; left:-50rem;" data-6000="opacity:1; left:5rem;" data-7000="opacity:1; left:5rem;" data-8000="opacity:0; left:50rem;">
-      <div class="text-frame">
-        <p alt="">Spring water provides a habitat for aquifer species, water for downstream users, and fresh inflows for the bays and estuaries along the Texas Gulf Coast.</p>
-      </div>
-    </div>
-    <div skrollr class="div-fixed z-100" data-4999="top:16rem;" data-5000="opacity:0; left:50rem;" data-6000="opacity:1; left:5rem;" data-7000="opacity:1; left:5rem;" data-8000="opacity:0; left:-50rem;">
-      <video class="video-frame" preload="auto" autoplay loop muted>
-        <source src="../videos/720p/SpringRun.webm" type="video/webm">
-        <source src="../videos/720p/SpringRun.mp4" type="video/mp4">
-      </video>
-    </div>
-    <div skrollr class="div-fixed z-450" data-4999="left:18rem;" data-5000="opacity:0; top:58rem;" data-6000="opacity:1; top:52rem;" data-7000="opacity:1; top:52rem;" data-8000="opacity:0; top:58rem;">
-      <div class="text-label">
-        <p>Inflows &amp; Estuaries</p>
-      </div>
-    </div>
-  </div>
-
-  <!-- Section 3 -->
-  <div id="section03">
-    <div skrollr class="div-fixed z-400" data-7999="top:8rem;" data-8000="opacity:0; left:-50rem;" data-9000="opacity:1; left:5rem;" data-10000="opacity:1; left:5rem;" data-11000="opacity:0; left:50rem;">
-      <div class="text-frame">
-        <p alt="">Heading north and east about 20 miles from Comal Springs, you’ll reach San Marcos Springs, the second largest spring system and Texas.</p>
-      </div>
-    </div>
-    <div skrollr class="div-fixed z-100" data-7999="top:16rem;" data-8000="opacity:0; left:50rem;" data-9000="opacity:1; left:5rem;" data-10000="opacity:1; left:5rem;" data-11000="opacity:0; left:-50rem;">
-      <div id="springs-image-02" class="image-frame"></div>
-    </div>
-    <div skrollr class="div-fixed z-450" data-7999="left:18rem;" data-8000="opacity:0; top:58rem;" data-9000="opacity:1; top:52rem;" data-10000="opacity:1; top:52rem;" data-11000="opacity:0; top:58rem;">
-      <div class="text-label">
-        <p>San Marcos Springs</p>
-      </div>
-    </div>
-  </div>
-
-  <!-- Section 4 -->
-  <div id="section04">
     <div skrollr class="div-fixed z-400" data-10999="top:8rem;" data-11000="opacity:0; left:-50rem;" data-12000="opacity:1; left:5rem;" data-13000="opacity:1; left:5rem;" data-14000="opacity:0; left:50rem;">
       <div class="text-frame">
         <p alt="">Beneath the lake, numerous springs emerge along a common fault line propelling millions of gallons of water to the surface daily.</p>
@@ -132,25 +74,68 @@
     </div>
   </div>
 
-  <!-- Section 5 -->
-  <div id="section05">
-    <div skrollr class="div-fixed z-400" data-13999="top:8rem;" data-14000="opacity:0; left:-50rem;" data-15000="opacity:1; left:5rem;" data-16000="opacity:1; left:5rem;" data-17000="opacity:0; left:50rem;">
+  <!-- Section 2 -->
+  <div id="section02">
+    <div skrollr class="div-fixed z-400" data-1999="top:8rem;" data-2000="opacity:0; left:-50rem;" data-3000="opacity:1; left:5rem;" data-4000="opacity:1; left:5rem;" data-5000="opacity:0; left:50rem;">
       <div class="text-frame">
-        <p alt="">EAA technicians and divers from Texas State University work together to take water quality samples from Deep Spring, nearly 30 feet below the surface.</p>
+        <p alt="">Spring flow is dependant upon recharge and conservation.  Declining aquifer leves can result in reduced flow, or no flow if water levels drop below the elevation of the spring openings.</p>
       </div>
     </div>
-    <div skrollr class="div-fixed z-100" data-13999="top:16rem;" data-14000="opacity:0; left:50rem;" data-15000="opacity:1; left:5rem;" data-16000="opacity:1; left:5rem;" data-17000="opacity:0; left:-50rem;">
-      <div id="springs-image-03" class="image-frame"></div>
+    <div skrollr class="div-fixed z-100" data-1999="top:16rem;" data-2000="opacity:0; left:50rem;" data-3000="opacity:1; left:5rem;" data-4000="opacity:1; left:5rem;" data-5000="opacity:0; left:-50rem;">
+      <video class="video-frame" preload="auto" autoplay loop muted>
+        <source src="../videos/720p/ComalSpringsRun.webm" type="video/webm">
+        <source src="../videos/720p/ComalSpringsRun.mp4" type="video/mp4">
+      </video>
     </div>
-    <div skrollr class="div-fixed z-450" data-13999="left:18rem;" data-14000="opacity:0; top:58rem;" data-15000="opacity:1; top:52rem;" data-16000="opacity:1; top:52rem;" data-17000="opacity:0; top:58rem;">
+    <div skrollr class="div-fixed z-450" data-1999="left:18rem;" data-2000="opacity:0; top:58rem;" data-3000="opacity:1; top:52rem;" data-4000="opacity:1; top:52rem;" data-5000="opacity:0; top:58rem;">
       <div class="text-label">
-        <p>Spring Sampling</p>
+        <p>Spring Flow</p>
       </div>
     </div>
   </div>
 
-  <!-- Section 6 -->
-  <div id="section06">
+  <!-- Section 3 -->
+  <div id="section03">
+    <div skrollr class="div-fixed z-400" data-4999="top:8rem;" data-5000="opacity:0; left:-50rem;" data-6000="opacity:1; left:5rem;" data-7000="opacity:1; left:5rem;" data-8000="opacity:0; left:50rem;">
+      <div class="text-frame">
+        <p alt="">Spring water provides a habitat for aquifer species, water for downstream users, and fresh inflows for the bays and estuaries along the Texas Gulf Coast.</p>
+      </div>
+    </div>
+    <div skrollr class="div-fixed z-100" data-4999="top:16rem;" data-5000="opacity:0; left:50rem;" data-6000="opacity:1; left:5rem;" data-7000="opacity:1; left:5rem;" data-8000="opacity:0; left:-50rem;">
+      <video class="video-frame" preload="auto" autoplay loop muted>
+        <source src="../videos/720p/SpringRun.webm" type="video/webm">
+        <source src="../videos/720p/SpringRun.mp4" type="video/mp4">
+      </video>
+    </div>
+    <div skrollr class="div-fixed z-450" data-4999="left:18rem;" data-5000="opacity:0; top:58rem;" data-6000="opacity:1; top:52rem;" data-7000="opacity:1; top:52rem;" data-8000="opacity:0; top:58rem;">
+      <div class="text-label">
+        <p>Inflows &amp; Estuaries</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Section 4 -->
+  <div id="section04">
+    <div skrollr class="div-fixed z-400" data-19999="top:7rem;" data-20000="opacity:0; left:-50rem;" data-21000="opacity:1; left:5rem;" data-22000="opacity:1; left:5rem;" data-23000="opacity:0; left:50rem;">
+      <div class="text-frame">
+        <p alt="">The 1950’s drought of record brought historically low aquifer and spring flow levels to South Texas.  Today, a similar drought—coupled with a larger population and pumping demands—could have devastating effects on the aquifer.  Drought management plans mandated by the EAA reduce pumping during critical period to as much as 44% in the most severe stage of drought.</p>
+      </div>
+    </div>
+    <div skrollr class="div-fixed z-100" data-19999="top:16rem;" data-20000="opacity:0; left:50rem;" data-21000="opacity:1; left:5rem;" data-22000="opacity:1; left:5rem;" data-23000="opacity:0; left:-50rem;">
+      <video class="video-frame" preload="auto" autoplay loop muted>
+        <source src="../videos/720p/HCPSpringLake.webm" type="video/webm">
+        <source src="../videos/720p/HCPSpringLake.mp4" type="video/mp4">
+      </video>
+    </div>
+    <div skrollr class="div-fixed z-450" data-19999="left:18rem;" data-20000="opacity:0; top:58rem;" data-21000="opacity:1; top:52rem;" data-22000="opacity:1; top:52rem;" data-23000="opacity:0; top:58rem;">
+      <div class="text-label">
+        <p>Spring Lake</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Section 5 -->
+  <div id="section05">
     <div skrollr class="div-fixed z-400" data-16999="top:8rem;" data-17000="opacity:0; left:-50rem;" data-18000="opacity:1; left:5rem;" data-19000="opacity:1; left:5rem;" data-20000="opacity:0; left:50rem;">
       <div class="text-frame">
         <p alt="">Historical data representing the spring levels within the aquifer for each year measured in feet above mean sea level.<br/>The markers indicate stream gauges used to measure the aquifer levels.</p>
@@ -168,53 +153,71 @@
     </div>
   </div>
 
-  <!-- Section 7 -->
-  <div id="section07">
-    <div skrollr class="div-fixed z-400" data-19999="top:8rem;" data-20000="opacity:0; left:-50rem;" data-21000="opacity:1; left:5rem;" data-22000="opacity:1; left:5rem;" data-23000="opacity:0; left:50rem;">
+  <!-- Section 6 -->
+  <div id="section06">
+    <div skrollr class="div-fixed z-400" data-13999="top:8rem;" data-14000="opacity:0; left:-50rem;" data-15000="opacity:1; left:5rem;" data-16000="opacity:1; left:5rem;" data-17000="opacity:0; left:50rem;">
       <div class="text-frame">
-        <p alt="">All the Edwards Aquifer Endangered and Threatened species – including Texas Wild Rice seen here – depend on clean fresh water from the aquifer.</p>
+        <p alt="">Native and endangered species also benefit from the artesian springs whose discharge sustains downstream users and freshwater inflows entering the bays and estuaries of the Texas Gulf Coast.</p>
       </div>
     </div>
-    <div skrollr class="div-fixed z-100" data-19999="top:16rem;" data-20000="opacity:0; left:50rem;" data-21000="opacity:1; left:5rem;" data-22000="opacity:1; left:5rem;" data-23000="opacity:0; left:-50rem;">
-      <div id="springs-image-04" class="image-frame"></div>
+    <div skrollr class="div-fixed z-300" data-13999="top:19rem;" data-14000="opacity:0; left:60rem;" data-15000="opacity:1; left:55rem;" data-16000="opacity:1; left:55rem;" data-17000="opacity:0; left:60rem;">
+      <div id="cons-image-16" class="image-small tall"></div>
     </div>
-    <div skrollr class="div-fixed z-450" data-19999="left:18rem;" data-20000="opacity:0; top:58rem;" data-21000="opacity:1; top:52rem;" data-22000="opacity:1; top:52rem;" data-23000="opacity:0; top:58rem;">
+    <div skrollr class="div-fixed z-250" data-13999="top:14rem;" data-14000="opacity:0; left:-10rem;" data-15000="opacity:1; left:3rem;" data-16000="opacity:1; left:3rem;" data-17000="opacity:0; left:-10rem;">
+      <div id="cons-image-15" class="image-small square"></div>
+    </div>
+    <div skrollr class="div-fixed z-200" data-13999="left:8rem;" data-14000="opacity:0; top:50rem;" data-15000="opacity:1; top:40rem;" data-16000="opacity:1; top:40rem;" data-17000="opacity:0; top:50rem;">
+      <div id="cons-image-14" class="image-small wide"></div>
+    </div>
+    <div skrollr class="div-fixed z-100" data-13999="top:16rem; left:5rem;" data-14000="opacity:0;" data-15000="opacity:1;" data-16000="opacity:1;" data-17000="opacity:0;">
+      <div id="cons-image-13" class="image-frame"></div>
+    </div>
+    <div skrollr class="div-fixed z-450" data-13999="left:18rem;" data-14000="opacity:0; top:58rem;" data-15000="opacity:1; top:52rem;" data-16000="opacity:1; top:52rem;" data-17000="opacity:0; top:58rem;">
       <div class="text-label">
-        <p>Endangered Species</p>
+        <p>Artesian Springs</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Section 7 -->
+  <div id="section07">
+    <div skrollr class="div-fixed z-400" data-13999="top:8rem;" data-14000="opacity:0; left:-50rem;" data-15000="opacity:1; left:5rem;" data-16000="opacity:1; left:5rem;" data-17000="opacity:0; left:50rem;">
+      <div class="text-frame">
+        <p alt="">EAA technicians and divers from Texas State University work together to take water quality samples from Deep Spring, nearly 30 feet below the surface.</p>
+      </div>
+    </div>
+    <div skrollr class="div-fixed z-100" data-13999="top:16rem;" data-14000="opacity:0; left:50rem;" data-15000="opacity:1; left:5rem;" data-16000="opacity:1; left:5rem;" data-17000="opacity:0; left:-50rem;">
+      <div id="springs-image-03" class="image-frame"></div>
+    </div>
+    <div skrollr class="div-fixed z-450" data-13999="left:18rem;" data-14000="opacity:0; top:58rem;" data-15000="opacity:1; top:52rem;" data-16000="opacity:1; top:52rem;" data-17000="opacity:0; top:58rem;">
+      <div class="text-label">
+        <p>Spring Sampling</p>
       </div>
     </div>
   </div>
 
   <!-- Section 8 -->
   <div id="section08">
-    <div skrollr class="div-fixed z-400" data-22999="top:8rem;" data-23000="opacity:0; left:-50rem;" data-24000="opacity:1; left:5rem;" data-25000="opacity:1; left:5rem;" data-26000="opacity:0; left:50rem;">
-      <div class="text-frame">
-        <p alt="">In addition to water quality concerns, exotic invasive species like these elephant ear plants also threaten the habitat of the native species, by competing for food and altering the original riparian areas.</p>
-      </div>
-    </div>
-    <div skrollr class="div-fixed z-100" data-22999="top:16rem;" data-23000="opacity:0; left:50rem;" data-24000="opacity:1; left:5rem;" data-25000="opacity:1; left:5rem;" data-26000="opacity:0; left:-50rem;">
-      <div id="springs-image-05" class="image-frame"></div>
-    </div>
-    <div skrollr class="div-fixed z-450" data-22999="left:18rem;" data-23000="opacity:0; top:58rem;" data-24000="opacity:1; top:52rem;" data-25000="opacity:1; top:52rem;" data-26000="opacity:0; top:58rem;">
-      <div class="text-label">
-        <p>Invasive Species</p>
-      </div>
-    </div>
-  </div>
-
-  <!-- Section 9 -->
-  <div id="section09">
     <div skrollr class="div-fixed z-400" data-25999="top:8rem;" data-26000="opacity:0; left:-50rem;" data-27000="opacity:1; left:5rem;">
       <div class="text-frame">
-        <p alt="">To protect the endangered species long term the EAA, its regional partners, and stakeholders have implemented a comprehensive <a class="nav-link-hcp" href="{{urlHcp}}" title="Habitat Conservation Plan" target="_blank" ng-click="linkModelFunc(urlHcp)">Habitat Conservation Plan</a> to protect spring flow, water quality, and riparian habitat.</p>
-       </div>
+        <p alt="">The Edwards Aquifer region found a way to come together in order to meet the needs of a hugely diverse set of interests.  The <a class="nav-link-hcp" href="{{urlHcp}}" title="Habitat Conservation Plan" target="_blank" ng-click="linkModelFunc(urlHcp)">Habitat Conservation Plan</a> provides certainty to the region by affirming local control over use of the Edwards Aquifer.</p>
+      </div>
+    </div>
+    <div skrollr class="div-fixed z-300" data-25999="top:23rem;" data-26000="opacity:0; left:-10rem;" data-27000="opacity:1; left:4rem;">
+      <div id="cons-image-22" class="image-small tall"></div>
+    </div>
+    <div skrollr class="div-fixed z-250" data-25999="top:15rem;" data-26000="opacity:0; left:-10rem;" data-27000="opacity:1; left:4rem;">
+      <div id="branding-hfh" class="image-logo"></div>
+    </div>
+    <div skrollr class="div-fixed z-200" data-25999="left:40rem;" data-26000="opacity:0; top:50rem;" data-27000="opacity:1; top:20rem;">
+      <div id="cons-image-21" class="image-small wide"></div>
     </div>
     <div skrollr class="div-fixed z-100" data-25999="top:16rem;" data-26000="opacity:0; left:50rem;" data-27000="opacity:1; left:5rem;">
-      <div id="springs-image-06" class="image-frame"></div>
+      <div id="cons-image-20" class="image-frame"></div>
     </div>
     <div skrollr class="div-fixed z-450" data-25999="left:18rem;" data-26000="opacity:0; top:58rem;" data-27000="opacity:1; top:52rem;">
       <div class="text-label">
-        <p>Habitat Conservation</p>
+        <p>Habitat Conservation Plan</p>
       </div>
     </div>
   </div>
@@ -223,7 +226,7 @@
   <div id="end">
     <div skrollr class="div-fixed z-500" data-30499="left:9rem;" data-30500="opacity:0; top:58rem;" data-31000="opacity:1; top:54rem;">
       <div class="end-link">
-        <a href="#/about">Continue Exploring
+        <a href="#/conservation">Continue Exploring
           <div id="holder">
             <div class="dot"></div>
             <div class="pulse"></div>      
