--- a/app/views/conservation.html
+++ b/app/views/conservation.html
@@ -30,6 +30,35 @@
 
   <!-- Section 0 -->
   <div id="section00">
+    <div skrollr class="div-fixed z-400" data-16999="top:7rem;" data-17000="opacity:0; left:-50rem;" data-18000="opacity:1; left:5rem;" data-19000="opacity:1; left:5rem;" data-20000="opacity:0; left:50rem;">
+      <div class="text-frame">
+        <p alt="">The Edwards Aquifer is protected and conserved through one of the most comprehensive groundwater management plans in the country.  The Edwards Aquifer Authority Act, derived by Texas legislation from a federal court ruling, provided the means to limit annual water withdrawals, institute region-wide drought restrictions when necessary, and consider the effect of the EAA’s actions on downstream users.</p>
+      </div>
+    </div>
+    <div skrollr class="div-fixed z-250" data-16999="top:42rem;" data-17000="opacity:0; left:60rem;" data-18000="opacity:1; left:52rem;" data-19000="opacity:1; left:52rem;" data-20000="opacity:0; left:60rem;">
+      <div id="cons-image-19" class="image-small wide-tiny"></div>
+    </div>
+    <div skrollr class="div-fixed z-200" data-16999="left:2rem;" data-17000="opacity:0; top:50rem;" data-18000="opacity:1; top:32rem;" data-19000="opacity:1; top:32rem;" data-20000="opacity:0; top:50rem;">
+      <div id="cons-image-18" class="image-small square"></div>
+    </div>
+    <div skrollr class="div-fixed z-100" data-16999="top:16rem;left:5rem;" data-17000="opacity:0;" data-18000="opacity:1;" data-19000="opacity:1;" data-20000="opacity:0;">
+       <div id="cons-image-17" class="image-frame"></div>
+    </div>
+    <div skrollr class="div-fixed z-450" data-16999="left:18rem;" data-17000="opacity:0; top:58rem;" data-18000="opacity:1; top:52rem;" data-19000="opacity:1; top:52rem;" data-20000="opacity:0; top:58rem;">
+      <div class="text-label">
+        <p>Edwards Aquifer Authority Act</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Section 1 -->
+  <!-- Wickley: Director Districts Graphic -->
+
+  <!-- Section 2 -->
+  <!-- Wickley: WORDL -->
+
+  <!-- Section 3 -->
+  <div id="section03">
     <div skrollr class="div-fixed z-400" data-0="top:7rem;" data-1000="opacity:1; left:5rem;" data-2000="opacity:0; left:50rem;">
       <div class="text-frame">
         <p alt="">As a vital resource to more than two million South Central Texans, the Edwards Aquifer is shared by municipal, industrial, agricultural and recreational users. As such, the conservation and protection measures instituted by the EAA and regional stakeholders strive to preserve both water quantity and quality to sustain the aquifer and it’s species for future generations to enjoy.</p>
@@ -49,8 +78,8 @@
     </div>
   </div>
 
-  <!-- Section 1 -->
-  <div id="section01">
+  <!-- Section 4 -->
+  <div id="section04">
     <div skrollr class="div-fixed z-400" data-1999="top:8rem;" data-2000="opacity:0; left:-50rem;" data-3000="opacity:1; left:5rem;" data-4000="opacity:1; left:5rem;" data-5000="opacity:0; left:50rem;">
       <div class="text-frame">
         <p alt="">Cities and rural homes use water for domestic purposes including drinking, landscaping, gardening, and bathing.</p>
@@ -75,8 +104,8 @@
     </div>
   </div>
 
-  <!-- Section 2 -->
-  <div id="section02">
+  <!-- Section 5 -->
+  <div id="section05">
     <div skrollr class="div-fixed z-400" data-4999="top:8rem;" data-5000="opacity:0; left:-50rem;" data-6000="opacity:1; left:5rem;" data-7000="opacity:1; left:5rem;" data-8000="opacity:0; left:50rem;">
       <div class="text-frame">
         <p alt="">Farmers and ranchers have used the Edwards Aquifer for generations to irrigate crops and provide water for livestock.</p>
@@ -98,8 +127,8 @@
     </div>
   </div>
 
-  <!-- Section 3 -->
-  <div id="section03">
+  <!-- Section 6 -->
+  <div id="section06">
     <div skrollr class="div-fixed z-400" data-7999="top:8rem;" data-8000="opacity:0; left:-50rem;" data-9000="opacity:1; left:5rem;" data-10000="opacity:1; left:5rem;" data-11000="opacity:0; left:50rem;">
       <div class="text-frame">
         <p alt="">Industry and commerce depend on water to sustain the economy.</p>
@@ -121,8 +150,8 @@
     </div>
   </div>
 
-  <!-- Section 4 -->
-  <div id="section04">
+  <!-- Section 7 -->
+  <div id="section07">
     <div skrollr class="div-fixed z-400" data-10999="top:8rem;" data-11000="opacity:0; left:-50rem;" data-12000="opacity:1; left:5rem;" data-13000="opacity:1; left:5rem;" data-14000="opacity:0; left:50rem;">
       <div class="text-frame">
         <p alt="">Recreational users enjoy the cool, clear aquifer waters that feed into rivers and streams.</p>
@@ -140,75 +169,6 @@
     <div skrollr class="div-fixed z-450" data-10999="left:18rem;" data-11000="opacity:0; top:58rem;" data-12000="opacity:1; top:52rem;" data-13000="opacity:1; top:52rem;" data-14000="opacity:0; top:58rem;">
       <div class="text-label">
         <p>Play</p>
-      </div>
-    </div>
-  </div>
-
-  <!-- Section 5 -->
-  <div id="section05">
-    <div skrollr class="div-fixed z-400" data-13999="top:8rem;" data-14000="opacity:0; left:-50rem;" data-15000="opacity:1; left:5rem;" data-16000="opacity:1; left:5rem;" data-17000="opacity:0; left:50rem;">
-      <div class="text-frame">
-        <p alt="">Native and endangered species also benefit from the artesian springs whose discharge sustains downstream users and freshwater inflows entering the bays and estuaries of the Texas Gulf Coast.</p>
-      </div>
-    </div>
-    <div skrollr class="div-fixed z-300" data-13999="top:19rem;" data-14000="opacity:0; left:60rem;" data-15000="opacity:1; left:55rem;" data-16000="opacity:1; left:55rem;" data-17000="opacity:0; left:60rem;">
-      <div id="cons-image-16" class="image-small tall"></div>
-    </div>
-    <div skrollr class="div-fixed z-250" data-13999="top:14rem;" data-14000="opacity:0; left:-10rem;" data-15000="opacity:1; left:3rem;" data-16000="opacity:1; left:3rem;" data-17000="opacity:0; left:-10rem;">
-      <div id="cons-image-15" class="image-small square"></div>
-    </div>
-    <div skrollr class="div-fixed z-200" data-13999="left:8rem;" data-14000="opacity:0; top:50rem;" data-15000="opacity:1; top:40rem;" data-16000="opacity:1; top:40rem;" data-17000="opacity:0; top:50rem;">
-      <div id="cons-image-14" class="image-small wide"></div>
-    </div>
-    <div skrollr class="div-fixed z-100" data-13999="top:16rem; left:5rem;" data-14000="opacity:0;" data-15000="opacity:1;" data-16000="opacity:1;" data-17000="opacity:0;">
-      <div id="cons-image-13" class="image-frame"></div>
-    </div>
-    <div skrollr class="div-fixed z-450" data-13999="left:18rem;" data-14000="opacity:0; top:58rem;" data-15000="opacity:1; top:52rem;" data-16000="opacity:1; top:52rem;" data-17000="opacity:0; top:58rem;">
-      <div class="text-label">
-        <p>Artesian Springs</p>
-      </div>
-    </div>
-  </div>
-
-  <!-- Section 6 -->
-  <div id="section06">
-    <div skrollr class="div-fixed z-400" data-16999="top:7rem;" data-17000="opacity:0; left:-50rem;" data-18000="opacity:1; left:5rem;" data-19000="opacity:1; left:5rem;" data-20000="opacity:0; left:50rem;">
-      <div class="text-frame">
-        <p alt="">The Edwards Aquifer is protected and conserved through one of the most comprehensive groundwater management plans in the country.  The Edwards Aquifer Authority Act, derived by Texas legislation from a federal court ruling, provided the means to limit annual water withdrawals, institute region-wide drought restrictions when necessary, and consider the effect of the EAA’s actions on downstream users.</p>
-      </div>
-    </div>
-    <div skrollr class="div-fixed z-250" data-16999="top:42rem;" data-17000="opacity:0; left:60rem;" data-18000="opacity:1; left:52rem;" data-19000="opacity:1; left:52rem;" data-20000="opacity:0; left:60rem;">
-      <div id="cons-image-19" class="image-small wide-tiny"></div>
-    </div>
-    <div skrollr class="div-fixed z-200" data-16999="left:2rem;" data-17000="opacity:0; top:50rem;" data-18000="opacity:1; top:32rem;" data-19000="opacity:1; top:32rem;" data-20000="opacity:0; top:50rem;">
-      <div id="cons-image-18" class="image-small square"></div>
-    </div>
-    <div skrollr class="div-fixed z-100" data-16999="top:16rem;left:5rem;" data-17000="opacity:0;" data-18000="opacity:1;" data-19000="opacity:1;" data-20000="opacity:0;">
-       <div id="cons-image-17" class="image-frame"></div>
-    </div>
-    <div skrollr class="div-fixed z-450" data-16999="left:18rem;" data-17000="opacity:0; top:58rem;" data-18000="opacity:1; top:52rem;" data-19000="opacity:1; top:52rem;" data-20000="opacity:0; top:58rem;">
-      <div class="text-label">
-        <p>Edwards Aquifer Authority Act</p>
-      </div>
-    </div>
-  </div>
-
-  <!-- Section 7 -->
-  <div id="section07">
-    <div skrollr class="div-fixed z-400" data-19999="top:7rem;" data-20000="opacity:0; left:-50rem;" data-21000="opacity:1; left:5rem;" data-22000="opacity:1; left:5rem;" data-23000="opacity:0; left:50rem;">
-      <div class="text-frame">
-        <p alt="">The 1950’s drought of record brought historically low aquifer and spring flow levels to South Texas.  Today, a similar drought—coupled with a larger population and pumping demands—could have devastating effects on the aquifer.  Drought management plans mandated by the EAA reduce pumping during critical period to as much as 44% in the most severe stage of drought.</p>
-      </div>
-    </div>
-    <div skrollr class="div-fixed z-100" data-19999="top:16rem;" data-20000="opacity:0; left:50rem;" data-21000="opacity:1; left:5rem;" data-22000="opacity:1; left:5rem;" data-23000="opacity:0; left:-50rem;">
-      <video class="video-frame" preload="auto" autoplay loop muted>
-        <source src="../videos/720p/HCPSpringLake.webm" type="video/webm">
-        <source src="../videos/720p/HCPSpringLake.mp4" type="video/mp4">
-      </video>
-    </div>
-    <div skrollr class="div-fixed z-450" data-19999="left:18rem;" data-20000="opacity:0; top:58rem;" data-21000="opacity:1; top:52rem;" data-22000="opacity:1; top:52rem;" data-23000="opacity:0; top:58rem;">
-      <div class="text-label">
-        <p>Spring Lake</p>
       </div>
     </div>
   </div>
@@ -233,30 +193,7 @@
   </div>
 
   <!-- Section 9 -->
-  <div id="section09">
-    <div skrollr class="div-fixed z-400" data-25999="top:8rem;" data-26000="opacity:0; left:-50rem;" data-27000="opacity:1; left:5rem;">
-      <div class="text-frame">
-        <p alt="">The Edwards Aquifer region found a way to come together in order to meet the needs of a hugely diverse set of interests.  The <a class="nav-link-hcp" href="{{urlHcp}}" title="Habitat Conservation Plan" target="_blank" ng-click="linkModelFunc(urlHcp)">Habitat Conservation Plan</a> provides certainty to the region by affirming local control over use of the Edwards Aquifer.</p>
-      </div>
-    </div>
-    <div skrollr class="div-fixed z-300" data-25999="top:23rem;" data-26000="opacity:0; left:-10rem;" data-27000="opacity:1; left:4rem;">
-      <div id="cons-image-22" class="image-small tall"></div>
-    </div>
-    <div skrollr class="div-fixed z-250" data-25999="top:15rem;" data-26000="opacity:0; left:-10rem;" data-27000="opacity:1; left:4rem;">
-      <div id="branding-hfh" class="image-logo"></div>
-    </div>
-    <div skrollr class="div-fixed z-200" data-25999="left:40rem;" data-26000="opacity:0; top:50rem;" data-27000="opacity:1; top:20rem;">
-      <div id="cons-image-21" class="image-small wide"></div>
-    </div>
-    <div skrollr class="div-fixed z-100" data-25999="top:16rem;" data-26000="opacity:0; left:50rem;" data-27000="opacity:1; left:5rem;">
-      <div id="cons-image-20" class="image-frame"></div>
-    </div>
-    <div skrollr class="div-fixed z-450" data-25999="left:18rem;" data-26000="opacity:0; top:58rem;" data-27000="opacity:1; top:52rem;">
-      <div class="text-label">
-        <p>Habitat Conservation Plan</p>
-      </div>
-    </div>
-  </div>
+  <!-- Wickley: EAA ACT & CPM -->
 
   <!-- Explore Link -->
   <div id="end">
