Moved map to fron view and updated leaflet directive to be fully modular. Still reworking some aspects of the UI layout and data layers.

--- a/app/views/geography.html
+++ b/app/views/geography.html
@@ -1,178 +1,6 @@
 <div class="container">
   <div class="explore"> 
-    <div skrollr id="ripple-1" class="div-fixed z-50 background flip-image-hor" data-0="left:-2rem;" data-1="opacity:0.1; top:0%;" data-500="opacity:0.3; top:-15%;" data-7500="opacity:0.3; top:-90%;" data-8000="opacity:0.1; top:-100%;"></div>
-
-    <div class="div-fixed z-100">
-
-      <div skrollr class="div-fixed z-100" 
-        data-0="top:0rem; left:0rem; opacity:1;" data-8000="top:0rem; left:0rem; opacity:1;">
-        <div id="explore-image-backing" class="image-flyin"></div>
-      </div>
-
-      <div skrollr class="div-fixed z-150" 
-        data-0="top:-30rem; left:-20rem; opacity:1; transform:scale(1);"
-        data-1500="top:-110rem; left:-5rem; opacity:1; transform:scale(6);"
-        data-1800="top:-110rem; left:-5rem; opacity:0; transform:scale(6);">
-        <div id="explore-image-00" class="image-flyin"></div>
-      </div>
-
-      <div skrollr class="div-fixed z-350" 
-        data-0="top:10rem; left:25rem; opacity:1; transform:scale(1);"
-        data-1200="top:15rem; opacity:1; transform:scale(1.2);"
-        data-1500="top:18rem; opacity:0; transform:scale(3);">
-        <div id="explore-text-title" class="text-flyin no-Ibar">Explore the Edwards Aquifer</div>
-      </div>
-
-      <div skrollr class="div-fixed z-200" 
-        data-1200="top:-37rem; left:-26rem; opacity:0; transform:scale(0.8);"
-        data-1500="top:-40rem; left:-27rem; opacity:1; transform:scale(1);"
-        data-4000="top:-77.5rem; left:-39rem; opacity:1; transform:scale(3.9);"
-        data-4300="top:-77.5rem; left:-39rem; opacity:0; transform:scale(3.9);">
-        <div id="explore-image-01" class="image-flyin"></div>
-      </div>
-
-      <div skrollr class="div-fixed z-250" 
-        data-3700="top:-22rem; left:-20rem; opacity:0; transform:scale(0.6);"
-        data-4000="top:-22rem; left:-20rem; opacity:1; transform:scale(0.62);"
-        data-5000="top:-22rem; left:-20rem; opacity:1; transform:scale(0.62);"
-        data-5300="top:-22rem; left:-20rem; opacity:1; transform:scale(0.62);">
-        <div id="explore-image-02" class="image-flyin"></div>
-      </div>
-
-      <!-- ADD TEXT:  The Edwards Aquifer is broken into three significant segments. -->
-      <div skrollr class="div-fixed z-350" 
-        data-1500="top:0rem; left:20rem; opacity:0; transform:scale(1);"
-        data-2000="top:5rem; left:20rem; opacity:1; transform:scale(1);"
-        data-4000="top:5rem; left:20rem; opacity:1; transform:scale(1);">
-        <!-- data-4500="top:0rem; left:20rem; opacity:0; transform:scale(1);" -->
-        <div id="explore-text-01" class="text-flyin">
-          <h1 class="no-Ibar">The Edwards Aquifer is broken into three significant segments:<h1>
-        </div>
-      </div>
-
-      <div skrollr class="div-fixed z-300" 
-        data-4700="top:-22rem; left:-20rem; opacity:0; transform:scale(0.62);"
-        data-5000="top:-22rem; left:-20rem; opacity:1; transform:scale(0.62);"
-        data-5700="top:-22rem; left:-20rem; opacity:1; transform:scale(0.62);"
-        data-6000="top:-22rem; left:-20rem; opacity:0; transform:scale(0.62);">
-        <div id="explore-image-03" class="image-flyin"></div>
-      </div>
-
-      <!-- ADD TEXT:  Drainange Zone -->
-      <div skrollr class="div-fixed z-350" 
-        data-4500="top:20rem; left:5rem; opacity:0; transform:scale(1);"
-        data-5000="top:20rem; left:20rem; opacity:1; transform:scale(1);"
-        data-5500="top:20rem; left:20rem; opacity:1; transform:scale(1);">
-        <!-- data-6000="top:20rem; left:5rem; opacity:0; transform:scale(1);"> -->
-        <div id="explore-text-drainage" class="text-flyin">
-          <h1 class="no-Ibar">Drainage Area<h1>
-        </div>
-      </div>
-
-      <div skrollr class="div-fixed z-300" 
-        data-6000="top:-22rem; left:-20rem; opacity:0; transform:scale(0.62);"
-        data-6300="top:-22rem; left:-20rem; opacity:1; transform:scale(0.62);"
-        data-7000="top:-22rem; left:-20rem; opacity:1; transform:scale(0.62);"
-        data-7300="top:-22rem; left:-20rem; opacity:0; transform:scale(0.62);">
-        <div id="explore-image-04" class="image-flyin"></div>
-      </div>
-
-      <!-- ADD TEXT:  Recharge Zone -->
-      <div skrollr class="div-fixed z-350" 
-        data-6000="top:36rem; left:10rem; opacity:0; transform:scale(1);"
-        data-6500="top:36rem; left:25rem; opacity:1; transform:scale(1);"
-        data-7000="top:36rem; left:25rem; opacity:1; transform:scale(1);">
-        <!-- data-7500="top:36rem; left:10rem; opacity:0; transform:scale(1);"> -->
-        <div id="explore-text-recharge" class="text-flyin">
-          <h1 class="no-Ibar">Recharge Area<h1>
-        </div>
-      </div>
-
-      <div skrollr class="div-fixed z-300" 
-        data-7300="top:-22rem; left:-20rem; opacity:0; transform:scale(0.62);"
-        data-7600="top:-22rem; left:-20rem; opacity:1; transform:scale(0.62);"
-        data-8300="top:-22rem; left:-20rem; opacity:1; transform:scale(0.62);"
-        data-8600="top:-22rem; left:-20rem; opacity:0; transform:scale(0.62);">
-        <div id="explore-image-05" class="image-flyin"></div>
-      </div>
-
-      <!-- ADD TEXT:  Artesian Zone -->
-      <div skrollr class="div-fixed z-350" 
-        data-7000="top:42rem; left:40rem; opacity:0; transform:scale(1);"
-        data-7500="top:42rem; left:50rem; opacity:1; transform:scale(1);"
-        data-8000="top:42rem; left:50rem; opacity:1; transform:scale(1);">
-        <!-- data-8500="top:42rem; left:40rem; opacity:0; transform:scale(1);"> -->
-        <div id="explore-text-artesian" class="text-flyin">
-          <h1 class="no-Ibar">Artesian Area<h1>
-        </div>
-      </div>
-
-      <!-- Add In href link video elements. Need a style for the video elements. -->
-
-      <!-- Video: Leona (bottom left) - Wheat Field -->
-      <div skrollr class="div-fixed z-350" 
-        data-9000="top:40rem; left:20rem; opacity:0; transform:scale(1);"
-        data-9500="top:40rem; left:30rem; opacity:1; transform:scale(1);"
-        data-10000="top:40rem; left:30rem; opacity:1; transform:scale(1);">
-        <div>
-          <a href="#/caves-karsts">
-            <video class="explore-videos" preload="auto" autoplay loop muted>
-              <source src="../videos/720p/HCPWheatfield.webm" type="video/webm">
-              <source src="../videos/720p/HCPWheatfield.mp4" type="video/mp4">
-            </video>
-          </a>
-        </div>
-      </div>
-
-      <!-- Video: J17 (middle right) - Salamander -->
-      <div skrollr class="div-fixed z-350" 
-        data-9200="top:30rem; left:60rem; opacity:0; transform:scale(1);"
-        data-9700="top:30rem; left:70rem; opacity:1; transform:scale(1);"
-        data-10200="top:30rem; left:70rem; opacity:1; transform:scale(1);">
-        <div>
-          <a href="#/conservation">
-            <video class="explore-videos" preload="auto" autoplay loop muted>
-              <source src="../videos/720p/TexasBlindSalamander.webm" type="video/webm">
-              <source src="../videos/720p/TexasBlindSalamander.mp4" type="video/mp4">
-            </video>
-          </a>
-        </div>
-      </div>
-
-      <!-- Video: San Marcos (top right) - Undulating Reeds-->
-      <div skrollr class="div-fixed z-350" 
-        data-9400="top:14rem; left:78rem; opacity:0; transform:scale(1);"
-        data-9900="top:14rem; left:88rem; opacity:1; transform:scale(1);"
-        data-10400="top:14rem; left:88rem; opacity:1; transform:scale(1);">
-        <div>
-          <a href="#/springs">
-            <video class="explore-videos" preload="auto" autoplay loop muted>
-              <source src="../videos/720p/HCPSanMarcosRiver-loop3.webm" type="video/webm">
-              <source src="../videos/720p/HCPSanMarcosRiver-loop3.mp4" type="video/mp4">
-            </video>
-          </a>
-        </div>
-      </div>
-
-      <!-- Still need to trigger autoscroll at page load. -->
-      <div skrollr class="div-fixed z-350" 
-        data-9600="top:7rem; left:20rem; opacity:0; transform:scale(1);"
-        data-10100="top:10rem; left:20rem; opacity:1; transform:scale(1);"
-        data-10600="top:10rem; left:20rem; opacity:1; transform:scale(1);">
-        <!-- data-8500="top:42rem; left:40rem; opacity:0; transform:scale(1);"> -->
-        <div id="explore-text-select" class="text-flyin">
-          <h3 class="no-Ibar">Select a location within the San Antonio Segment of the Balcones Fault Zone <br/>to discover the wonders of the Edwards Aquifer System in central Texas.</h3>
-        </div>
-      </div>
-
-      <svg skrollr class="div-fixed z-400" height="0" width="0" data-9000="top:10rem; left:20rem; transform:scale(1);">
-        <defs>
-          <clipPath id="svgPath">
-            <circle stroke="#000000" stroke-miterlimit="10" cx="100" cy="60" r="50" />
-          </clipPath>
-        </defs>
-      </svg>
-
-    </div>
+    <!-- <div id="map" class="div-fixed z-100"></div> -->
+    <leaflet-map id="map" class="div-fixed z-100"></leaflet-map>
   </div>
 </div>
