--- a/app/styles/general.css
+++ b/app/styles/general.css
@@ -7,7 +7,8 @@ html {
 }
 body {
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: scroll; /*hidden;*/
+  position: absolute;
   margin-bottom: 5rem;
   text-rendering: optimizeLegibility;
   /*font-family: 'Exo 2', sans-serif; */
@@ -44,6 +45,7 @@ a:hover {
   font-size: 18px;
   line-height: 20px;
   height: 50px;
+  color: #71B2C9;
 }
 .eaa-logo {
   min-width: 80px;
