--- a/app/views/geography.html
+++ b/app/views/geography.html
@@ -1,6 +1,6 @@
-<div class="container">
-  <div class="explore"> 
+<!-- <div class="container"> -->
+  <div class="geography">
     <!-- <div id="map" class="div-fixed z-100"></div> -->
     <leaflet-map id="map" class="div-fixed z-100"></leaflet-map>
   </div>
-</div>
+<!-- </div> -->
