--- a/app/views/conservation.html
+++ b/app/views/conservation.html
@@ -30,21 +30,21 @@
 
   <!-- Section 0 -->
   <div id="section00">
-    <div skrollr class="div-fixed z-400" data-16999="top:7rem;" data-17000="opacity:0; left:-50rem;" data-18000="opacity:1; left:5rem;" data-19000="opacity:1; left:5rem;" data-20000="opacity:0; left:50rem;">
+    <div skrollr class="div-fixed z-400" data-0="top:7rem; opacity:1; left:5rem;" data-1000="opacity:1; left:5rem;" data-2000="opacity:0; left:50rem;">
       <div class="text-frame">
         <p alt="">The Edwards Aquifer is protected and conserved through one of the most comprehensive groundwater management plans in the country.  The Edwards Aquifer Authority Act, derived by Texas legislation from a federal court ruling, provided the means to limit annual water withdrawals, institute region-wide drought restrictions when necessary, and consider the effect of the EAA’s actions on downstream users.</p>
       </div>
     </div>
-    <div skrollr class="div-fixed z-250" data-16999="top:42rem;" data-17000="opacity:0; left:60rem;" data-18000="opacity:1; left:52rem;" data-19000="opacity:1; left:52rem;" data-20000="opacity:0; left:60rem;">
+    <div skrollr class="div-fixed z-250" data-0="top:42rem; opacity:1; left:52rem;" data-1000="opacity:1; left:52rem;" data-2000="opacity:0; left:60rem;">
       <div id="cons-image-19" class="image-small wide-tiny"></div>
     </div>
-    <div skrollr class="div-fixed z-200" data-16999="left:2rem;" data-17000="opacity:0; top:50rem;" data-18000="opacity:1; top:32rem;" data-19000="opacity:1; top:32rem;" data-20000="opacity:0; top:50rem;">
+    <div skrollr class="div-fixed z-200" data-0="left:2rem; opacity:1; top:32rem;" data-1000="opacity:1; top:32rem;" data-2000="opacity:0; top:50rem;">
       <div id="cons-image-18" class="image-small square"></div>
     </div>
-    <div skrollr class="div-fixed z-100" data-16999="top:16rem;left:5rem;" data-17000="opacity:0;" data-18000="opacity:1;" data-19000="opacity:1;" data-20000="opacity:0;">
+    <div skrollr class="div-fixed z-100" data-0="top:16rem; left:5rem; opacity:1;" data-1000="opacity:1;" data-2000="opacity:0;">
        <div id="cons-image-17" class="image-frame"></div>
     </div>
-    <div skrollr class="div-fixed z-450" data-16999="left:18rem;" data-17000="opacity:0; top:58rem;" data-18000="opacity:1; top:52rem;" data-19000="opacity:1; top:52rem;" data-20000="opacity:0; top:58rem;">
+    <div skrollr class="div-fixed z-450" data-0="left:19rem; opacity:1; top:52rem;" data-1000="opacity:1; top:52rem;" data-2000="opacity:0; top:58rem;">
       <div class="text-label">
         <p>Edwards Aquifer Authority Act</p>
       </div>
@@ -53,25 +53,59 @@
 
   <!-- Section 1 -->
   <!-- Wickley: Director Districts Graphic -->
+  <div id="section01">
+    <div skrollr class="div-fixed z-400" data-1999="top:8rem;" data-2000="opacity:0; left:-50rem;" data-3000="opacity:1; left:5rem;" data-4000="opacity:1; left:5rem;" data-5000="opacity:0; left:50rem;">
+      <div class="text-frame">
+        <p alt="">IMAGE</p>
+      </div>
+    </div>
+    <div skrollr class="div-fixed z-500" data-1999="top:16rem;" data-2000="opacity:0; left:50rem;" data-3000="opacity:1; left:5rem;" data-4000="opacity:1; left:5rem;" data-5000="opacity:0; left:-50rem;">
+      <div class="text-frame">
+        <p alt="">IMAGE</p>
+      </div>
+    </div>
+    <div skrollr class="div-fixed z-450" data-1999="left:18rem;" data-2000="opacity:0; top:58rem;" data-3000="opacity:1; top:52rem;" data-4000="opacity:1; top:52rem;" data-5000="opacity:0; top:58rem;">
+      <div class="text-label">
+        <p>Director Districts Graphic</p>
+      </div>
+    </div>
+  </div>
 
   <!-- Section 2 -->
   <!-- Wickley: WORDL -->
+  <div id="section02">
+    <div skrollr class="div-fixed z-400" data-4999="top:8rem;" data-5000="opacity:0; left:-50rem;" data-6000="opacity:1; left:5rem;" data-7000="opacity:1; left:5rem;" data-8000="opacity:0; left:50rem;">
+      <div class="text-frame">
+        <p alt="">IMAGE</p>
+      </div>
+    </div>
+    <div skrollr class="div-fixed z-500" data-4999="top:16rem;" data-5000="opacity:0; left:50rem;" data-6000="opacity:1; left:5rem;" data-7000="opacity:1; left:5rem;" data-8000="opacity:0; left:-50rem;">
+      <div class="text-frame">
+        <p alt="">IMAGE</p>
+      </div>
+    </div>
+    <div skrollr class="div-fixed z-450" data-4999="left:18rem;" data-5000="opacity:0; top:58rem;" data-6000="opacity:1; top:52rem;" data-7000="opacity:1; top:52rem;" data-8000="opacity:0; top:58rem;">
+      <div class="text-label">
+        <p>WORDL</p>
+      </div>
+    </div>
+  </div>
 
   <!-- Section 3 -->
   <div id="section03">
-    <div skrollr class="div-fixed z-400" data-0="top:7rem;" data-1000="opacity:1; left:5rem;" data-2000="opacity:0; left:50rem;">
+    <div skrollr class="div-fixed z-400" data-7999="top:7rem;" data-8000="opacity:0; left:-50rem;" data-9000="opacity:1; left:5rem;" data-10000="opacity:1; left:5rem;" data-11000="opacity:0; left:50rem;">
       <div class="text-frame">
         <p alt="">As a vital resource to more than two million South Central Texans, the Edwards Aquifer is shared by municipal, industrial, agricultural and recreational users. As such, the conservation and protection measures instituted by the EAA and regional stakeholders strive to preserve both water quantity and quality to sustain the aquifer and it’s species for future generations to enjoy.</p>
       </div>
     </div>
-    <div skrollr class="div-fixed z-100" data-999="top:16rem; left:5rem;" data-1000="opacity:1;" data-2000="opacity:0;">
+    <div skrollr class="div-fixed z-500" data-7999="top:16rem;" data-8000="opacity:0; left:50rem;" data-9000="opacity:1; left:5rem;" data-10000="opacity:1; left:5rem;" data-11000="opacity:0; left:-50rem;">
       <video class="video-frame" preload="auto" autoplay loop muted>
         <source src="../videos/720p/HCPSanMarcos.webm" type="video/webm">
         <source src="../videos/720p/HCPSanMarcos.mp4" type="video/mp4">
       </video>
     </div>
     </div>
-    <div skrollr class="div-fixed z-450" data-0="left:18rem;" data-1000="opacity:1; top:52rem;" data-2000="opacity:0; top:58rem;">
+    <div skrollr class="div-fixed z-450" data-7999="left:18rem;" data-8000="opacity:0; top:58rem;" data-9000="opacity:1; top:52rem;" data-10000="opacity:1; top:52rem;" data-11000="opacity:0; top:58rem;">
       <div class="text-label">
         <p>Conservation</p>
       </div>
@@ -80,24 +114,24 @@
 
   <!-- Section 4 -->
   <div id="section04">
-    <div skrollr class="div-fixed z-400" data-1999="top:8rem;" data-2000="opacity:0; left:-50rem;" data-3000="opacity:1; left:5rem;" data-4000="opacity:1; left:5rem;" data-5000="opacity:0; left:50rem;">
+    <div skrollr class="div-fixed z-400" data-10999="top:8rem;" data-11000="opacity:0; left:-50rem;" data-12000="opacity:1; left:5rem;" data-13000="opacity:1; left:5rem;" data-14000="opacity:0; left:50rem;">
       <div class="text-frame">
         <p alt="">Cities and rural homes use water for domestic purposes including drinking, landscaping, gardening, and bathing.</p>
       </div>
     </div>
-    <div skrollr class="div-fixed z-300" data-1999="top:19rem;" data-2000="opacity:0; left:60rem;" data-3000="opacity:1; left:51rem;" data-4000="opacity:1; left:51rem;" data-5000="opacity:0; left:60rem;">
+    <div skrollr class="div-fixed z-300" data-10999="top:19rem;" data-11000="opacity:0; left:60rem;" data-12000="opacity:1; left:51rem;" data-13000="opacity:1; left:51rem;" data-14000="opacity:0; left:60rem;">
       <div id="cons-image-03" class="image-small tall"></div>
     </div>
-    <div skrollr class="div-fixed z-250" data-1999="top:14rem;" data-2000="opacity:0; left:-10rem;" data-3000="opacity:1; left:3rem;" data-4000="opacity:1; left:3rem;" data-5000="opacity:0; left:-10rem;">
+    <div skrollr class="div-fixed z-250" data-10999="top:14rem;" data-11000="opacity:0; left:-10rem;" data-12000="opacity:1; left:3rem;" data-13000="opacity:1; left:3rem;" data-14000="opacity:0; left:-10rem;">
       <div id="cons-image-01" class="image-small wide"></div>
     </div>
-    <div skrollr class="div-fixed z-200" data-1999="left:8rem;" data-2000="opacity:0; top:50rem;" data-3000="opacity:1; top:32rem;" data-4000="opacity:1; top:32rem;" data-5000="opacity:0; top:50rem;">
+    <div skrollr class="div-fixed z-200" data-10999="left:8rem;" data-11000="opacity:0; top:50rem;" data-12000="opacity:1; top:32rem;" data-13000="opacity:1; top:32rem;" data-14000="opacity:0; top:50rem;">
       <div id="cons-image-02" class="image-small square"></div>
     </div>
-    <div skrollr class="div-fixed z-100" data-1999="top:16rem; left:5rem;" data-2000="opacity:0;" data-3000="opacity:1;" data-4000="opacity:1;" data-5000="opacity:0;">
+    <div skrollr class="div-fixed z-100" data-10999="top:16rem; left:5rem;" data-11000="opacity:0;" data-12000="opacity:1;" data-13000="opacity:1;" data-14000="opacity:0;">
       <div id="cons-image-00" class="image-frame"></div>
     </div>
-    <div skrollr class="div-fixed z-450" data-1999="left:18rem;" data-2000="opacity:0; top:58rem;" data-3000="opacity:1; top:52rem;" data-4000="opacity:1; top:52rem;" data-5000="opacity:0; top:58rem;">
+    <div skrollr class="div-fixed z-450" data-10999="left:18rem;" data-11000="opacity:0; top:58rem;" data-12000="opacity:1; top:52rem;" data-13000="opacity:1; top:52rem;" data-14000="opacity:0; top:58rem;">
       <div class="text-label">
         <p>Users</p>
       </div>
@@ -106,21 +140,21 @@
 
   <!-- Section 5 -->
   <div id="section05">
-    <div skrollr class="div-fixed z-400" data-4999="top:8rem;" data-5000="opacity:0; left:-50rem;" data-6000="opacity:1; left:5rem;" data-7000="opacity:1; left:5rem;" data-8000="opacity:0; left:50rem;">
+    <div skrollr class="div-fixed z-400" data-13999="top:8rem;" data-14000="opacity:0; left:-50rem;" data-15000="opacity:1; left:5rem;" data-16000="opacity:1; left:5rem;" data-17000="opacity:0; left:50rem;">
       <div class="text-frame">
         <p alt="">Farmers and ranchers have used the Edwards Aquifer for generations to irrigate crops and provide water for livestock.</p>
       </div>
     </div>
-    <div skrollr class="div-fixed z-250" data-4999="top:19rem;" data-5000="opacity:0; left:60rem;" data-6000="opacity:1; left:50rem;" data-7000="opacity:1; left:50rem;" data-8000="opacity:0; left:60rem;">
+    <div skrollr class="div-fixed z-250" data-13999="top:19rem;" data-14000="opacity:0; left:60rem;" data-15000="opacity:1; left:50rem;" data-16000="opacity:1; left:50rem;" data-17000="opacity:0; left:60rem;">
       <div id="cons-image-05" class="image-small tall"></div>
     </div>
-    <div skrollr class="div-fixed z-200" data-4999="left:3rem;" data-5000="opacity:0; top:50rem;" data-6000="opacity:1; top:32rem;" data-7000="opacity:1; top:32rem;" data-8000="opacity:0; top:50rem;">
+    <div skrollr class="div-fixed z-200" data-13999="left:3rem;" data-14000="opacity:0; top:50rem;" data-15000="opacity:1; top:32rem;" data-16000="opacity:1; top:32rem;" data-17000="opacity:0; top:50rem;">
       <div id="cons-image-06" class="image-small square"></div>
     </div>
-    <div skrollr class="div-fixed z-100" data-4999="top:16rem; left:5rem;" data-5000="opacity:0;" data-6000="opacity:1;" data-7000="opacity:1;" data-8000="opacity:0;">
+    <div skrollr class="div-fixed z-100" data-13999="top:16rem; left:5rem;" data-14000="opacity:0;" data-15000="opacity:1;" data-16000="opacity:1;" data-17000="opacity:0;">
       <div id="cons-image-04" class="image-frame"></div>
     </div>
-    <div skrollr class="div-fixed z-450" data-4999="left:18rem;" data-5000="opacity:0; top:58rem;" data-6000="opacity:1; top:52rem;" data-7000="opacity:1; top:52rem;" data-8000="opacity:0; top:58rem;">
+    <div skrollr class="div-fixed z-450" data-13999="left:18rem;" data-14000="opacity:0; top:58rem;" data-15000="opacity:1; top:52rem;" data-16000="opacity:1; top:52rem;" data-17000="opacity:0; top:58rem;">
       <div class="text-label">
         <p>Food &amp; Livestock</p>
       </div>
@@ -129,21 +163,21 @@
 
   <!-- Section 6 -->
   <div id="section06">
-    <div skrollr class="div-fixed z-400" data-7999="top:8rem;" data-8000="opacity:0; left:-50rem;" data-9000="opacity:1; left:5rem;" data-10000="opacity:1; left:5rem;" data-11000="opacity:0; left:50rem;">
+    <div skrollr class="div-fixed z-400" data-16999="top:8rem;" data-17000="opacity:0; left:-50rem;" data-18000="opacity:1; left:5rem;" data-19000="opacity:1; left:5rem;" data-20000="opacity:0; left:50rem;">
       <div class="text-frame">
         <p alt="">Industry and commerce depend on water to sustain the economy.</p>
       </div>
     </div>
-    <div skrollr class="div-fixed z-250" data-7999="top:14rem;" data-8000="opacity:0; left:70rem;" data-9000="opacity:1; left:42rem;" data-10000="opacity:1; left:42rem;" data-11000="opacity:0; left:70rem;">
+    <div skrollr class="div-fixed z-250" data-16999="top:14rem;" data-17000="opacity:0; left:70rem;" data-18000="opacity:1; left:42rem;" data-19000="opacity:1; left:42rem;" data-20000="opacity:0; left:70rem;">
       <div id="cons-image-08" class="image-small wide"></div>
     </div>
-    <div skrollr class="div-fixed z-200" data-7999="left:30rem;" data-8000="opacity:0; top:50rem;" data-9000="opacity:1; top:32rem;" data-10000="opacity:1; top:32rem;" data-11000="opacity:0; top:50rem;">
+    <div skrollr class="div-fixed z-200" data-16999="left:30rem;" data-17000="opacity:0; top:50rem;" data-18000="opacity:1; top:32rem;" data-19000="opacity:1; top:32rem;" data-20000="opacity:0; top:50rem;">
       <div id="cons-image-09" class="image-small square"></div>
     </div>
-    <div skrollr class="div-fixed z-100" data-7999="top:16rem;" data-8000="opacity:0; left:-50rem;" data-9000="opacity:1; left:5rem;" data-10000="opacity:1; left:5rem;" data-11000="opacity:0; left:-50rem;">
+    <div skrollr class="div-fixed z-100" data-16999="top:16rem;" data-17000="opacity:0; left:-50rem;" data-18000="opacity:1; left:5rem;" data-19000="opacity:1; left:5rem;" data-20000="opacity:0; left:-50rem;">
       <div id="cons-image-07" class="image-frame"></div>
     </div>
-    <div skrollr class="div-fixed z-450" data-7999="left:18rem;" data-8000="opacity:0; top:58rem;" data-9000="opacity:1; top:52rem;" data-10000="opacity:1; top:52rem;" data-11000="opacity:0; top:58rem;">
+    <div skrollr class="div-fixed z-450" data-16999="left:18rem;" data-17000="opacity:0; top:58rem;" data-18000="opacity:1; top:52rem;" data-19000="opacity:1; top:52rem;" data-20000="opacity:0; top:58rem;">
       <div class="text-label">
         <p>Industry</p>
       </div>
@@ -152,21 +186,21 @@
 
   <!-- Section 7 -->
   <div id="section07">
-    <div skrollr class="div-fixed z-400" data-10999="top:8rem;" data-11000="opacity:0; left:-50rem;" data-12000="opacity:1; left:5rem;" data-13000="opacity:1; left:5rem;" data-14000="opacity:0; left:50rem;">
+    <div skrollr class="div-fixed z-400" data-19999="top:8rem;" data-20000="opacity:0; left:-50rem;" data-21000="opacity:1; left:5rem;" data-22000="opacity:1; left:5rem;" data-23000="opacity:0; left:50rem;">
       <div class="text-frame">
         <p alt="">Recreational users enjoy the cool, clear aquifer waters that feed into rivers and streams.</p>
       </div>
     </div>
-    <div skrollr class="div-fixed z-250" data-10999="left:3rem;" data-11000="opacity:0; top:70rem;" data-12000="opacity:1; top:14rem;" data-13000="opacity:1; top:14rem;" data-14000="opacity:0; top:-10rem;">
+    <div skrollr class="div-fixed z-250" data-19999="left:3rem;" data-20000="opacity:0; top:70rem;" data-21000="opacity:1; top:14rem;" data-22000="opacity:1; top:14rem;" data-23000="opacity:0; top:-10rem;">
       <div id="cons-image-11" class="image-small wide"></div>
     </div>
-    <div skrollr class="div-fixed z-200" data-10999="top:22rem;" data-11000="opacity:0; left:60rem;" data-12000="opacity:1; left:42rem;" data-13000="opacity:1; left:42rem;" data-14000="opacity:0; left:60rem;">
+    <div skrollr class="div-fixed z-200" data-19999="top:22rem;" data-20000="opacity:0; left:60rem;" data-21000="opacity:1; left:42rem;" data-22000="opacity:1; left:42rem;" data-23000="opacity:0; left:60rem;">
       <div id="cons-image-12" class="image-small square"></div>
     </div>
-    <div skrollr class="div-fixed z-100" data-10999="top:16rem;" data-11000="opacity:0; left:-50rem;" data-12000="opacity:1; left:5rem;" data-13000="opacity:1; left:5rem;" data-14000="opacity:0; left:-50rem;">
+    <div skrollr class="div-fixed z-100" data-19999="top:16rem;" data-20000="opacity:0; left:-50rem;" data-21000="opacity:1; left:5rem;" data-22000="opacity:1; left:5rem;" data-23000="opacity:0; left:-50rem;">
       <div id="cons-image-10" class="image-frame"></div>
     </div>
-    <div skrollr class="div-fixed z-450" data-10999="left:18rem;" data-11000="opacity:0; top:58rem;" data-12000="opacity:1; top:52rem;" data-13000="opacity:1; top:52rem;" data-14000="opacity:0; top:58rem;">
+    <div skrollr class="div-fixed z-450" data-19999="left:18rem;" data-20000="opacity:0; top:58rem;" data-21000="opacity:1; top:52rem;" data-22000="opacity:1; top:52rem;" data-23000="opacity:0; top:58rem;">
       <div class="text-label">
         <p>Play</p>
       </div>
@@ -194,5 +228,22 @@
 
   <!-- Section 9 -->
   <!-- Wickley: EAA ACT & CPM -->
+  <div id="section09">
+    <div skrollr class="div-fixed z-400" data-25999="top:8rem;" data-26000="opacity:0; left:-50rem;" data-27000="opacity:1; left:5rem;">
+      <div class="text-frame">
+        <p alt="">IMAGE</p>
+      </div>
+    </div>
+    <div skrollr class="div-fixed z-500" data-25999="top:16rem;" data-26000="opacity:0; left:50rem;" data-27000="opacity:1; left:5rem;">
+      <div class="text-frame">
+        <p alt="">IMAGE</p>
+      </div>
+    </div>
+    <div skrollr class="div-fixed z-450" data-25999="left:18rem;" data-26000="opacity:0; top:58rem;" data-27000="opacity:1; top:52rem;">
+      <div class="text-label">
+        <p>EAA ACT &amp; CPM</p>
+      </div>
+    </div>
+  </div>
 
 </div>
