Geology edits to content complete. Now to species.

--- a/app/styles/skrollr.css
+++ b/app/styles/skrollr.css
@@ -439,6 +439,9 @@
 #ck-image-02 { background-image:url(../images/caves_karsts/edwards-limestone_web_hd.jpg); }
 #ck-image-03 { background-image:url(../images/caves_karsts/valdina_8r_web_hd.jpg); }
 #ck-image-04 { background-image:url(../images/caves_karsts/Valdina_Farms_Cave_IMG0017_web_hd.jpg); }
+#ck-image-05 { background-image:url(../images/caves_karsts/038_EAA-recharge_karst_52703.jpg); }
+#ck-image-06 { background-image:url(../images/caves_karsts/fossil_0607_1962_A.jpg); }
+#ck-image-07 { background-image:url(../images/caves_karsts/fossil_0607_2151_A.jpg); }
 
 /* Conservation */
 #cons-image-00 { background-image: url(../images/conservation/07Jul_PumpStation_CMYK_web_hd.jpg); }
