--- a/app/views/geology.html
+++ b/app/views/geology.html
@@ -15,7 +15,7 @@
   </div>
 
   <!-- Backgrounds -->
-  <div skrollr id="wall-1" class="div-fixed z-50 background flip-image-hor" data-0="opacity:0.2; top:0%;" data-1000="opacity:0.6; top:4%;" data-27500="opacity:0.6; top:-100%;" data-28000="opacity:0.1;"></div>
+  <div skrollr id="wall-1" class="div-fixed z-50 background flip-image-hor" data-0="opacity:0.2; top:0%;" data-1000="opacity:0.6; top:4%;" data-24500="opacity:0.6; top:-100%;" data-25000="opacity:0.1;"></div>
 
   <!-- Scroll Indicator -->
   <div skrollr class="div-fixed z-500" data-0="top:54rem;" data-1000="opacity:1; left:9rem;" data-2000="opacity:0; left:-10rem;">
@@ -41,7 +41,7 @@
     </div>
     <div skrollr class="div-fixed z-450" data-0="left:18rem;" data-1000="opacity:1; top:52rem;" data-2000="opacity:0; top:58rem;">
       <div class="text-label">
-        <p>Seco Sinkhole</p>
+        <p>Geology of the Edwards Aquifer</p>
       </div>
     </div>
   </div>
@@ -50,7 +50,8 @@
   <div id="section01">
     <div skrollr class="div-fixed z-400" data-1999="top:8rem;" data-2000="opacity:0; left:-50rem;" data-3000="opacity:1; left:5rem;" data-4000="opacity:1; left:5rem;" data-5000="opacity:0; left:50rem;">
       <div class="text-frame">
-        <p alt="">For millions of years, water has transformed the landscape of the Balcones Fault Zone in South Central Texas, creating the Edwards Aquifer and the hundreds of caves and karst features within the limestone.</p>   
+        <p alt="">The Edwards Aquifer is a karst aquifer, a term describing a landscape with soluble rocks like limestone, forming caves, sinkholes, and other natural fractures, resulting in highly permeable terrain.</p>
+        <!-- <p alt="">For millions of years, water has transformed the landscape of the Balcones Fault Zone in South Central Texas, creating the Edwards Aquifer and the hundreds of caves and karst features within the limestone.</p>    -->
       </div>
     </div>
     <div skrollr class="div-fixed z-100" data-1999="top:16rem;" data-2000="opacity:0; left:50rem;" data-3000="opacity:1; left:5rem;" data-4000="opacity:1; left:5rem;" data-5000="opacity:0; left:-50rem;">
@@ -61,7 +62,7 @@
     </div>
     <div skrollr class="div-fixed z-450" data-1999="left:18rem;" data-2000="opacity:0; top:58rem;" data-3000="opacity:1; top:52rem;" data-4000="opacity:1; top:52rem;" data-5000="opacity:0; top:58rem;">
       <div class="text-label">
-        <p>Water Runoff</p>
+        <p>Karst</p>
       </div>
     </div>
   </div>
@@ -74,10 +75,16 @@
         <p alt="">The Edwards Aquifer began forming over 100 million years ago, while south Texas was covered by a warm shallow ocean. The remains of organisms accumulated in layers, later forming the limestone as the seas regressed.  During the Cretaceous Period, dinosaurs roamed the landscape and natural forces went to work, carving the landscape and forming the aquifer we know today.</p>
       </div>
     </div>
-    <div skrollr class="div-fixed z-100" data-4999="top:16rem;" data-5000="opacity:0; left:50rem;" data-6000="opacity:1; left:5rem;" data-7000="opacity:1; left:5rem;" data-8000="opacity:0; left:-50rem;">
-      <div id="ck-image-01" class="image-frame"></div>
+    <div skrollr class="div-fixed z-250" data-4999="top:18rem;" data-5000="opacity:0; left:60rem;" data-6000="opacity:1; left:50rem;" data-7000="opacity:1; left:50rem;" data-8000="opacity:0; left:60rem;">
+      <div id="ck-image-06" class="image-small square"></div>
     </div>
-    <div skrollr class="div-fixed z-450" data-4999="left:18rem;" data-5000="opacity:0; top:58rem;" data-6000="opacity:1; top:52rem;" data-7000="opacity:1; top:52rem;" data-8000="opacity:0; top:58rem;">
+    <div skrollr class="div-fixed z-200" data-4999="left:2rem;" data-5000="opacity:0; top:50rem;" data-6000="opacity:1; top:32rem;" data-7000="opacity:1; top:32rem;" data-8000="opacity:0; top:50rem;">
+      <div id="ck-image-05" class="image-small square"></div>
+    </div>
+    <div skrollr class="div-fixed z-100" data-4999="top:16rem;" data-5000="opacity:0;" data-6000="left:5rem; opacity:1;" data-7000="opacity:1;" data-8000="opacity:0;">
+       <div id="ck-image-07" class="image-frame"></div>
+    </div>
+    <div skrollr class="div-fixed z-450" data-4999="left:20rem;" data-5000="opacity:0; top:58rem;" data-6000="opacity:1; top:52rem;" data-7000="opacity:1; top:52rem;" data-8000="opacity:0; top:58rem;">
       <div class="text-label">
         <p>Geologic History of the Aquifer</p>
       </div>
@@ -88,7 +95,8 @@
   <div id="section03">
     <div skrollr class="div-fixed z-400" data-7999="top:8rem;" data-8000="opacity:0; left:-50rem;" data-9000="opacity:1; left:5rem;" data-10000="opacity:1; left:5rem;" data-11000="opacity:0; left:50rem;">
       <div class="text-frame">
-        <p alt="">In the Drainage Area, water emerges from numerous small springs along the Edwards Plateau to create the baseflow for rivers that add recharge to the aquifer.  Strong thunderstorms fill the normally dry riverbeds of the Texas Hill Country.</p>
+        <!-- <p alt="">In the Drainage Area, water emerges from numerous small springs along the Edwards Plateau to create the baseflow for rivers that add recharge to the aquifer.  Strong thunderstorms fill the normally dry riverbeds of the Texas Hill Country.</p> -->
+        <p alt="">Beginning along the Southern edge of the Edwards Plateau, the Drainage Area funnels water into streams and creeks that flow south toward the Recharge Zone.</p>
       </div>
     </div>
     <div skrollr class="div-fixed z-100" data-7999="top:16rem;" data-8000="opacity:0; left:50rem;" data-9000="opacity:1; left:5rem;" data-10000="opacity:1; left:5rem;" data-11000="opacity:0; left:-50rem;">
@@ -99,13 +107,13 @@
     </div>
     <div skrollr class="div-fixed z-450" data-7999="left:18rem;" data-8000="opacity:0; top:58rem;" data-9000="opacity:1; top:52rem;" data-10000="opacity:1; top:52rem;" data-11000="opacity:0; top:58rem;">
       <div class="text-label">
-        <p>Drainage</p>
+        <p>The Drainage Area</p>
       </div>
     </div>
   </div>
 
   <!-- Section 4 -->
-  <div id="section04">
+  <!-- <div id="section04">
     <div skrollr class="div-fixed z-400" data-10999="top:7.5rem;" data-11000="opacity:0; left:-50rem;" data-12000="opacity:1; left:5rem;" data-13000="opacity:1; left:5rem;" data-14000="opacity:0; left:50rem;">
       <div class="text-frame">
         <p alt="">As the rainwater mixes with organic compounds in the soil, it forms a diluted weak acid called carbonic acid.  Over millions of years this acid has dissolved out some of the calcite minerals that make up the Edwards Aquifer, leaving interconnected pores and cavities, and in some cases large cave systems.</p>
@@ -119,41 +127,42 @@
         <p>Limestone</p>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <!-- Section 5 -->
   <div id="section05">
-    <div skrollr class="div-fixed z-400" data-13999="top:8rem;" data-14000="opacity:0; left:-50rem;" data-15000="opacity:1; left:5rem;" data-16000="opacity:1; left:5rem;" data-17000="opacity:0; left:50rem;">
+    <div skrollr class="div-fixed z-400" data-10999="top:8rem;" data-11000="opacity:0; left:-50rem;" data-12000="opacity:1; left:5rem;" data-13000="opacity:1; left:5rem;" data-14000="opacity:0; left:50rem;">
       <div class="text-frame">
-        <p alt="">The pores created in the rock can range in size from microscopic to several feet in diameter—such as this 40ft wide sinkhole in Medina County, Texas.</p>
+        <!-- <p alt="">The pores created in the rock can range in size from microscopic to several feet in diameter—such as this 40ft wide sinkhole in Medina County, Texas.</p> -->
+        <p alt="">Water originating from the Drainage Area soaks into the porous and permeable Edwards Limestone comprising the Recharge Zone of the Aquifer. Here the water sinks, or infiltrates underground, entering the interconnected conduits or passageways that makeup the Edwards Aquifer. The amount of total recharge can be calculated each year using stream gauges and rainfall estimates.</p>
       </div>
     </div>
-    <div skrollr class="div-fixed z-100" data-13999="top:16rem;" data-14000="opacity:0; left:50rem;" data-15000="opacity:1; left:5rem;" data-16000="opacity:1; left:5rem;" data-17000="opacity:0; left:-50rem;">
+    <div skrollr class="div-fixed z-100" data-10999="top:16rem;" data-11000="opacity:0; left:50rem;" data-12000="opacity:1; left:5rem;" data-13000="opacity:1; left:5rem;" data-14000="opacity:0; left:-50rem;">
       <video class="video-frame" preload="auto" autoplay loop muted>
         <source src="../videos/720p/CaveEntrance.webm" type="video/webm">
         <source src="../videos/720p/CaveEntrance.mp4" type="video/mp4">
       </video>
     </div>
-    <div skrollr class="div-fixed z-450" data-13999="left:18rem;" data-14000="opacity:0; top:58rem;" data-15000="opacity:1; top:52rem;" data-16000="opacity:1; top:52rem;" data-17000="opacity:0; top:58rem;">
+    <div skrollr class="div-fixed z-450" data-10999="left:18rem;" data-11000="opacity:0; top:58rem;" data-12000="opacity:1; top:52rem;" data-13000="opacity:1; top:52rem;" data-14000="opacity:0; top:58rem;">
       <div class="text-label">
-        <p>Sinkhole</p>
+        <p>The Recharge Zone</p>
       </div>
     </div>
   </div>
 
   <!-- Section 6 -->
   <div id="section06">
-    <div skrollr class="div-fixed z-400" data-16999="top:8rem;" data-17000="opacity:0; left:-50rem;" data-18000="opacity:1; left:5rem;" data-19000="opacity:1; left:5rem;" data-20000="opacity:0; left:50rem;">
+    <div skrollr class="div-fixed z-400" data-13999="top:8rem;" data-14000="opacity:0; left:-50rem;" data-15000="opacity:1; left:5rem;" data-16000="opacity:1; left:5rem;" data-17000="opacity:0; left:50rem;">
       <div class="text-frame">
         <p alt="">Historical data representing the rate of recharge within the aquifer for each year measured in thousands of acre feet.<br/>The middle segment of the aquifer represents the recharge zone. The bluer the color, the more water is being added.</p>
       </div>
     </div>
-    <div skrollr class="div-fixed z-500" data-16999="top:16rem;" data-17000="opacity:0; left:50rem;" data-18000="opacity:1; left:5rem;" data-19000="opacity:1; left:5rem;" data-20000="opacity:0; left:-50rem;">
+    <div skrollr class="div-fixed z-500" data-13999="top:16rem;" data-14000="opacity:0; left:50rem;" data-15000="opacity:1; left:5rem;" data-16000="opacity:1; left:5rem;" data-17000="opacity:0; left:-50rem;">
       <div id="interactive" class="interactive interactive-frame">
         <eaa-gauge-data-interactive-recharge></eaa-gauge-data-interactive-recharge>
       </div> 
     </div>
-    <div skrollr class="div-fixed z-450" data-16999="left:18rem;" data-17000="opacity:0; top:58rem;" data-18000="opacity:1; top:52rem;" data-19000="opacity:1; top:52rem;" data-20000="opacity:0; top:58rem;">
+    <div skrollr class="div-fixed z-450" data-13999="left:18rem;" data-14000="opacity:0; top:58rem;" data-15000="opacity:1; top:52rem;" data-16000="opacity:1; top:52rem;" data-17000="opacity:0; top:58rem;">
       <div class="text-label">
         <p>Recharge Data</p>
       </div>
@@ -162,41 +171,42 @@
 
   <!-- Section 7 -->
   <div id="section07">
-    <div skrollr class="div-fixed z-400" data-19999="top:8rem;" data-20000="opacity:0; left:-50rem;" data-21000="opacity:1; left:5rem;" data-22000="opacity:1; left:5rem;" data-23000="opacity:0; left:50rem;">
+    <div skrollr class="div-fixed z-400" data-16999="top:8rem;" data-17000="opacity:0; left:-50rem;" data-18000="opacity:1; left:5rem;" data-19000="opacity:1; left:5rem;" data-20000="opacity:0; left:50rem;">
       <div class="text-frame">
         <p alt="">A caver descends more than 150 feet to the bottom of the sinkhole, following a similar path that rainfall and runoff would take.</p>
       </div>
     </div>
-    <div skrollr class="div-fixed z-100" data-19999="top:16rem;" data-20000="opacity:0; left:50rem;" data-21000="opacity:1; left:5rem;" data-22000="top:16rem;" data-24999="top:-40rem;" data-25000="opacity:1; top:-40rem;" data-26000="opacity:0; top:-60rem;">
+    <div skrollr class="div-fixed z-100" data-16999="top:16rem;" data-17000="opacity:0; left:50rem;" data-18000="opacity:1; left:5rem;" data-19000="top:16rem;" data-21999="top:-40rem;" data-22000="opacity:1; top:-40rem;" data-23000="opacity:0; top:-60rem;">
       <div id="ck-image-03" class="image-frame-tall"></div>
     </div>
-    <div skrollr class="div-fixed z-500" data-19999="left:18rem;" data-20000="opacity:0; top:58rem;" data-21000="opacity:1; top:52rem;" data-24500="opacity:1; top:52rem;" data-26000="opacity:0; top:58rem;">
+    <div skrollr class="div-fixed z-500" data-17000="left:4rem; opacity:0; top:18rem;" data-18000="left:16rem; opacity:1; top:18rem;" data-22000="left:16rem; opacity:1; top:52rem;" data-23000="left:16rem; opacity:0; top:58rem;">
       <div class="text-label">
         <p>Descent</p>
       </div>
     </div>
-  </div> 
+  </div>
 
   <!-- Section 8 -->
   <div id="section08">
-    <div skrollr class="div-fixed z-400" data-25999="top:7.5rem;" data-26000="opacity:0; left:-50rem;" data-27000="opacity:1; left:5rem;">
+    <div skrollr class="div-fixed z-400" data-22999="top:7.5rem;" data-23000="opacity:0; left:-50rem;" data-24000="opacity:1; left:5rem;">
       <div class="text-frame">
-        <p alt="">As the water percolates through the rocks it eventually reaches the water table, or point which the limestone is completely saturated.  From here the water moves deeper underground, flowing generally north and east towards discharge points at thousands of water wells, and some of the largest spring systems in Texas.</p>
+        <!-- <p alt="">As the water percolates through the rocks it eventually reaches the water table, or point which the limestone is completely saturated.  From here the water moves deeper underground, flowing generally north and east towards discharge points at thousands of water wells, and some of the largest spring systems in Texas.</p> -->
+        <p alt="">As the water flows deeper underground, flowing generally north and east towards discharge points via thousands of water wells, and some of the largest spring systems in Texas.</p>
       </div>
     </div>
-    <div skrollr class="div-fixed z-100" data-25999="top:16rem;" data-26000="opacity:0; left:50rem;" data-27000="opacity:1; left:5rem;">
+    <div skrollr class="div-fixed z-100" data-22999="top:16rem;" data-23000="opacity:0; left:50rem;" data-24000="opacity:1; left:5rem;">
       <div id="ck-image-04" class="image-frame"></div>
     </div>
-    <div skrollr class="div-fixed z-450" data-25999="left:18rem;" data-26000="opacity:0; top:58rem;" data-27000="opacity:1; top:52rem;">
+    <div skrollr class="div-fixed z-450" data-22999="left:18rem;" data-23000="opacity:0; top:58rem;" data-24000="opacity:1; top:52rem;">
       <div class="text-label">
-        <p>Watertable</p>
+        <p>Artesian Zone</p>
       </div>
     </div>
   </div>
 
   <!-- Explore Link -->
   <div id="end">
-    <div skrollr class="div-fixed z-500" data-27499="left:9rem;" data-27500="opacity:0; top:58rem;" data-28000="opacity:1; top:54rem;">
+    <div skrollr class="div-fixed z-500" data-24499="left:9rem;" data-24500="opacity:0; top:58rem;" data-25000="opacity:1; top:54rem;">
       <div class="end-link">
         <a href="#/springs">Continue Exploring
           <div id="holder">
